# exercise

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
client/: client.c
client/commands/: commands.c
client/commands/inc/: commands.h  commands_codes.h
client/inc/: client.h
commands/inc/: commands_codes.h
common/: common.c
common/inc/: common.h
libs/common/: common.c
libs/common/inc/: common.h
libs/crc32/: crc32.c
libs/crc32/inc/: crc32.h
libs/rabin/: rabinpoly.c
libs/rabin/inc/: rabinpoly.h
libs/sha256/: sha256.c
libs/sha256/inc/: hash-internal.h  sha256.h
libs/thpool/: thpool.c
libs/thpool/inc/: thpool.h
server/: server.c
server/inc/: server.h
